--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -10,16 +10,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="6.10.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
-    <PackageReference Include="Moq" Version="4.18.4" />
+    <PackageReference Include="moq" Version="4.18.4" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TestAutomationDropboxApp\TestAutomationDropboxApp.csproj" />
+    <ProjectReference Include="..\DemoApp\DemoApp.csproj" />
   </ItemGroup>
 
 </Project>
